--- a/index.html
+++ b/index.html
@@ -261,6 +261,6 @@
         </div>
     </section>
 
-    <script src="script.js"></script>
+    <script src="script.js" async defer></script>
 </body>
 </html>
